# QDuration

./: .gitignore  CMakeLists.txt  README.md  qmldir
examples/: CMakeLists.txt  example_basic.cpp  main.qml
src/: CMakeLists.txt  QDuration  plugin.cpp  qduration.cpp  qduration.h  qduration_global.h
tests/: CMakeLists.txt  test_qduration.cpp
